WIP - very broken collector api rewrite
